--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <div class="card-body">
                 <h2>12th March,2022</h2>
                 <p>Introduction to UI/UX</p>
-                <p>Difference Between UI & UX/p>
+                <p>Difference Between UI & UX</p>
                 <p>Basics of UI/UX</p>
                 <p>Making a UI/UX Page</p>
               </div>
